--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,9 @@ default: &default
 development:
   <<: *default
   database: db/development.sqlite3
-production:
-  <<: *default
-  database: db/prod.sqlite3
+#production:
+#  <<: *default
+#  database: db/prod.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,12 +23,12 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-#production:
-#  adapter: mysql2
-#  encoding: utf8
-#  reconnect: false
-#  database: modlen_db
-#  pool: 5
-#  username: root
-#  password: modlenSQLPass
-#  host: localhost
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: modlen_db
+  pool: 5
+  username: root
+  password: modlenSQLPass
+  host: localhost
